# pixie

./: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json  vercel-build.js  vercel.json
.github/: CODEOWNERS
scripts/: copy-wasm-prod.js  copy-wasm.js
src/: main.ts  styles.scss
src/Services/: image-processor.service.ts
src/app/: app.component.ts  app.routes.ts
src/app/image-editor/: image-editor.component.html  image-editor.component.scss  image-editor.component.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
