[package]
name = "image-editor-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
web-sys = { version = "0.3", features = ["console", "ImageData", "CanvasRenderingContext2d", "HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"